# log4cpp

./: .clang-format  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README.md  THANKS  autogen.sh  configure.in
.github/workflows/: build_master.yml  sync-with-sf_net-cron.yml  sync-with-sf_net-simple.yml  sync-with-sourceforge_net.yml
bcb5/testConfig/: testConfig.bpf
cmake/: NTEventLog.cmake  auto-configure-log4cpp.cmake  log4cppConfig.cmake.in
doc/html/: index.html  styles.css
examples/: CMakeLists.txt
examples/cmake_usages/: CMakeLists.txt
examples/cmake_usages/log4cpp_as_package/: CMakeLists.txt  log4cpp_as_package.cpp
examples/cmake_usages/log4cpp_as_package/resources/: log4cpp.properties
examples/cmake_usages/log4cpp_as_subproject/: CMakeLists.txt  log4cpp_as_subproject.cpp
include/: config.h.in
include/log4cpp/: AbortAppender.hh  Appender.hh  AppenderSkeleton.hh  AppendersFactory.hh  BasicConfigurator.hh  BasicLayout.hh  BufferingAppender.hh  Category.hh  CategoryStream.hh  Configurator.hh  DailyRollingFileAppender.hh  Export.hh  FactoryParams.hh  FileAppender.hh  Filter.hh  FixedContextCategory.hh  HierarchyMaintainer.hh  IdsaAppender.hh  Layout.hh  LayoutAppender.hh  LayoutsFactory.hh  LevelEvaluator.hh  LogMacros.hh  LoggingEvent.hh  Manipulator.hh  NDC.hh  NTEventLogAppender.hh  OstreamAppender.hh  PassThroughLayout.hh  PatternLayout.hh  Portability.hh  Priority.hh  PropertyConfigurator.hh  RemoteSyslogAppender.hh  RollingFileAppender.hh  SimpleConfigurator.hh  SimpleLayout.hh  SmtpAppender.hh  StringQueueAppender.hh  SyslogAppender.hh  (+10 more)
include/log4cpp/threading/: BoostThreads.hh  DummyThreads.hh  MSThreads.hh  OmniThreads.hh  PThreads.hh
msvc10/log4cppRunnable/: log4cppRunnable.vcxproj
msvc10/testPropConfig/: testPropConfig.vcxproj
msvc6/testPropConfig/: testPropConfig.dsp
msvc7/testPropConfig/: testPropConfig.vcproj
resources/: NTEventLogCategories.mc
src/: AbortAppender.cpp  Appender.cpp  AppenderSkeleton.cpp  AppendersFactory.cpp  BasicConfigurator.cpp  BasicLayout.cpp  BufferingAppender.cpp  Category.cpp  CategoryStream.cpp  Configurator.cpp  DailyRollingFileAppender.cpp  DllMain.cpp  DummyThreads.cpp  FactoryParams.cpp  FileAppender.cpp  Filter.cpp  FixedContextCategory.cpp  HierarchyMaintainer.cpp  IdsaAppender.cpp  LayoutAppender.cpp  LayoutsFactory.cpp  LevelEvaluator.cpp  Localtime.cpp  Localtime.hh  LoggingEvent.cpp  MSThreads.cpp  Manipulator.cpp  NDC.cpp  NTEventLogAppender.cpp  NTEventLogDummy.cpp  OmniThreads.cpp  OstreamAppender.cpp  PThreads.cpp  PassThroughLayout.cpp  PatternLayout.cpp  PortabilityImpl.cpp  PortabilityImpl.hh  Priority.cpp  Properties.cpp  Properties.hh  (+15 more)
tests/: CMakeLists.txt  Clock.cpp  Clock.hh  Makefile.am  NDCTest.hh  jamfile  testCategory.cpp  testConfig.cpp  testDLL.cpp  testDailyRollingFileAppender.cpp  testDailyRollingFileAppender.log4cpp.nt.properties  testDailyRollingFileAppender.log4cpp.properties  testErrorCollision.cpp  testFilter.cpp  testFixedContextCategory.cpp  testNDC.cpp  testNDCMain.cpp  testNTEventLog.cpp  testPattern.cpp  testPriority.cpp  testPropConfig.cpp  testPropConfig.log4cpp.nt.properties  testPropConfig.log4cpp.properties  testProperties.cpp  testPropertyConfig.cpp  testRollingFileAppender.cpp  testSimpleConfig.cpp  test_convenience.cpp  testbench.cpp  testmain.cpp
